[gd_scene load_steps=11 format=2]

[ext_resource path="res://ui/fonts/vt23 font/Adumu.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/scripts/LoginScreen.gd" type="Script" id=2]
[ext_resource path="res://ui/scripts/HoverButton.gd" type="Script" id=3]
[ext_resource path="res://ui/textures/start button.png" type="Texture" id=4]
[ext_resource path="res://ui/textures/stone-button.png" type="Texture" id=5]
[ext_resource path="res://ui/textures/splash.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 75
extra_spacing_bottom = 32
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 7.0
content_margin_top = 7.0
bg_color = Color( 0.117647, 0.117647, 0.117647, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.8, 0.8, 0.8, 0.454902 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0, 0, 0, 0.541176 )
shadow_offset = Vector2( 0.5, 0.5 )

[sub_resource type="DynamicFont" id=3]
size = 37
outline_size = 5
outline_color = Color( 1, 1, 1, 0 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 25
outline_size = 4
outline_color = Color( 1, 1, 1, 0 )
font_data = ExtResource( 1 )

[node name="LoginScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.667419
margin_right = 0.66748
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginBox" type="VBoxContainer" parent="CenterContainer"]
margin_left = 490.0
margin_top = 191.0
margin_right = 790.0
margin_bottom = 529.0
rect_pivot_offset = Vector2( -524.431, 17.0411 )

[node name="Label" type="Label" parent="CenterContainer/LoginBox"]
margin_right = 300.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 1 )
text = "Login"
align = 1

[node name="Username" type="LineEdit" parent="CenterContainer/LoginBox"]
margin_top = 111.0
margin_right = 300.0
margin_bottom = 151.0
rect_min_size = Vector2( 300, 40 )
custom_styles/normal = SubResource( 2 )
align = 1
placeholder_text = "Username"

[node name="Password" type="LineEdit" parent="CenterContainer/LoginBox"]
margin_top = 155.0
margin_right = 300.0
margin_bottom = 195.0
rect_min_size = Vector2( 300, 40 )
custom_styles/normal = SubResource( 2 )
align = 1
secret = true
placeholder_text = "Password"

[node name="LoginButton" type="TextureButton" parent="CenterContainer/LoginBox"]
margin_top = 199.0
margin_right = 300.0
margin_bottom = 274.0
rect_min_size = Vector2( 250, 75 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
texture_normal = ExtResource( 4 )
expand = true
script = ExtResource( 3 )

[node name="Label" type="Label" parent="CenterContainer/LoginBox/LoginButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 7.55957
margin_bottom = 7.55957
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.152941, 0.0588235, 0, 1 )
custom_colors/font_color_shadow = Color( 0.992157, 0.556863, 0, 1 )
text = "Login"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoToSignup" type="TextureButton" parent="CenterContainer/LoginBox"]
margin_top = 278.0
margin_right = 300.0
margin_bottom = 338.0
rect_min_size = Vector2( 200, 60 )
mouse_default_cursor_shape = 2
size_flags_vertical = 0
texture_normal = ExtResource( 5 )
expand = true
script = ExtResource( 3 )

[node name="Label" type="Label" parent="CenterContainer/LoginBox/GoToSignup"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.0700073, 0.111741, 0.144531, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Sign Up"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SignupBox" type="VBoxContainer" parent="CenterContainer"]
visible = false
margin_left = 490.0
margin_top = 169.0
margin_right = 790.0
margin_bottom = 551.0
rect_pivot_offset = Vector2( -524.431, 17.0411 )

[node name="Label" type="Label" parent="CenterContainer/SignupBox"]
margin_right = 300.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 1 )
text = "Sign Up"
align = 1

[node name="Username" type="LineEdit" parent="CenterContainer/SignupBox"]
margin_top = 111.0
margin_right = 300.0
margin_bottom = 151.0
rect_min_size = Vector2( 300, 40 )
custom_styles/normal = SubResource( 2 )
align = 1
placeholder_text = "Username"

[node name="Password" type="LineEdit" parent="CenterContainer/SignupBox"]
margin_top = 155.0
margin_right = 300.0
margin_bottom = 195.0
rect_min_size = Vector2( 300, 40 )
custom_styles/normal = SubResource( 2 )
align = 1
secret = true
placeholder_text = "Password"

[node name="ConfirmPassword" type="LineEdit" parent="CenterContainer/SignupBox"]
margin_top = 199.0
margin_right = 300.0
margin_bottom = 239.0
rect_min_size = Vector2( 300, 40 )
custom_styles/normal = SubResource( 2 )
align = 1
secret = true
placeholder_text = "Confirm Password"

[node name="SignupButton" type="TextureButton" parent="CenterContainer/SignupBox"]
margin_top = 243.0
margin_right = 300.0
margin_bottom = 318.0
rect_min_size = Vector2( 250, 75 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
texture_normal = ExtResource( 4 )
expand = true
script = ExtResource( 3 )

[node name="Label" type="Label" parent="CenterContainer/SignupBox/SignupButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 7.55957
margin_bottom = 7.55957
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.152941, 0.0588235, 0, 1 )
custom_colors/font_color_shadow = Color( 0.992157, 0.556863, 0, 1 )
text = "Sign Up"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoToLogin" type="TextureButton" parent="CenterContainer/SignupBox"]
margin_top = 322.0
margin_right = 300.0
margin_bottom = 382.0
rect_min_size = Vector2( 200, 60 )
mouse_default_cursor_shape = 2
size_flags_vertical = 0
texture_normal = ExtResource( 5 )
expand = true
script = ExtResource( 3 )

[node name="Label" type="Label" parent="CenterContainer/SignupBox/GoToLogin"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.0700073, 0.111741, 0.144531, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Login"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/LoginBox/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="CenterContainer/LoginBox/GoToSignup" to="." method="_on_GoToSignup_pressed"]
[connection signal="pressed" from="CenterContainer/SignupBox/SignupButton" to="." method="_on_SignupButton_pressed"]
[connection signal="pressed" from="CenterContainer/SignupBox/GoToLogin" to="." method="_on_GoToLogin_pressed"]
